--- a/src/searchBox.css
+++ b/src/searchBox.css
@@ -1,5 +1,7 @@
 .searchBox {
-  boxShadow: '1px 2px 9px #F4AAB9'
+  box-shadow: 1px 2px 9px #f4aab9;
+  margin: 4em;
+  padding: 1em;
   text-align: center;
   margin: -25px 0 20px 0;
 }
